<resources>
    <string name="app_name">Assignment3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_explore">Explore</string>
    <string name="text_filter">Filter</string>
    <string name="text_location">Location</string>
    <string name="text_check_in">Check In</string>
    <string name="text_check_out">Check Out</string>
    <string name="text_count">Count</string>
    <string name="text_room">Rooms</string>
    <string name="text_search_now">Search Now</string>
    <string name="text_top_searches">Top Searches</string>
    <string name="text_popular_fragment">Popular Fragment</string>
    <string name="text_rating">4.5 (21 ratings)</string>
    <string name="text_place_name">The Westeen</string>
    <string name="text_promotion">GET 50% OFF</string>
    <string name="text_place_location">Gulshan Circle 2, Dhaka</string>
    <string name="text_facilities">Free Wifi</string>
    <string name="text_facilities2">Swimming</string>
    <string name="text_price_per_day">$99/day</string>
    <string name="text_rating2">4.3 (21 ratings)</string>
    <string name="text_price_per_day2">$89/day</string>
    <string name="text_place_name2">Tulip Hotel</string>
    <string name="text_location_2">Coxbazar, Chittagong</string>

    <string-array name="city_selection">
        <item>Yangon</item>
        <item>Mandalay</item>
        <item>Bagan</item>
    </string-array>

    <string-array name="price_range_selection">
        <item>Price $$ &gt; $$$</item>
        <item>Price 50 &gt; 100</item>
        <item>Price 100 &gt; 200</item>
    </string-array>
</resources>
