<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:layout_height="250dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        app:cardElevation="8dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/hotel01" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:src="@drawable/ic_star_yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:textColor="@android:color/white"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/text_rating" />

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_bookmark_white" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textAllCaps="false"
            android:text="@string/text_price_per_day" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_regular_2x"
        android:layout_below="@+id/cardView"
        android:textStyle="bold"
        android:text="@string/text_place_name" />

    <TextView
        android:id="@+id/tvPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cardView"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/text_promotion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:layout_below="@+id/tvName"
        android:text="@string/text_place_location" />

    <TextView
        android:id="@+id/tvWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:layout_below="@+id/tvName"
        android:layout_toStartOf="@+id/ivDot"
        android:text="@string/text_facilities" />

    <ImageView
        android:id="@+id/ivDot"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/tvName"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_toStartOf="@+id/tvSwimming"
        android:src="@drawable/ic_dot_grey" />

    <TextView
        android:id="@+id/tvSwimming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:layout_below="@+id/tvName"
        android:layout_alignParentEnd="true"
        android:text="@string/text_facilities2" />

</RelativeLayout>
