<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_width="300dp"
    android:layout_height="200dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        app:cardElevation="8dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/hotel02" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:src="@drawable/ic_star_yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:textColor="@android:color/white"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/text_rating2" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:textAllCaps="false"
            android:text="@string/text_price_per_day2" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_regular_2x"
        android:layout_below="@+id/cardView"
        android:textStyle="bold"
        android:text="@string/text_place_name2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:layout_below="@+id/tvName"
        android:text="@string/text_location_2" />

</RelativeLayout>